# HyperCore

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
example_usage/Fine-Tuning/: fine_tuning_example.py
example_usage/Hyperbolic CLIP/: L-CLIP.py
example_usage/Hyperbolic_GCNs/graph_reconstruction/: reconstruction_example.py
example_usage/Hyperbolic_GCNs/link_prediction/: gil.py  hgat.py  hgcn.py  hgnn.py  hybonet.py  lgcn.py
example_usage/Hyperbolic_GCNs/node_classification/: gil.py  hgat.py  hgcn.py  hgnn.py  hybonet.py  lgcn.py
example_usage/Hyperbolic_GraphRAG/: graphRAG_example.py  graph_rag_data.py
example_usage/Hyperbolic_ResNets/: lorentz_resnet.py
example_usage/Hyperbolic_Transformers/: lorentz_transformer.py  vision_transformer.py
hypercore/: __init__.py
hypercore/datasets/: datasets.py
hypercore/manifolds/: StiefelManifold.py  __init__.py  base.py  euclidean.py  lmath.py  lorentzian.py  poincare.py  pseudohyperboloid.py  pseudohyperboloid_rh.py  pseudohyperboloid_sr.py  utils.py
hypercore/models/: LCLIP.py  LViT.py  Transformer_encoder.py  __init__.py  graph_decoders.py  graph_models.py  graph_retriever.py  lorentz_MoE.py  lorentz_deepseekV3.py  lorentz_feedforward.py  lorentz_knn.py  lorentz_resnet.py
hypercore/nn/: __init__.py
hypercore/nn/attention/: __init__.py  lorentz_former_conv.py  lorentz_latent_atten.py  (+5 more)
hypercore/optimizers/: __init__.py  initialize.py  radam.py  radamw.py  rsgd.py
hypercore/utils/: __init__.py  data_utils.py  eval_utils.py  h2h_data_utils.py  hyperbolicity.py  math_utils.py  pre_utils.py
(+36 files in other folders)
